--- a/src/components/MainContent/MainContent.scss
+++ b/src/components/MainContent/MainContent.scss
@@ -104,14 +104,15 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 300px; 
-    height: 300px; 
     overflow: hidden;
-    margin: 0 0 25px 0;
+    width: 100%;
+    aspect-ratio: 466/685;
     img {        
+      position: absolute;
+      top: 0;
+      left: 0;
       width: 100%;
       height: 100%;
-      position: absolute;
     } 
     @media (max-height: 730px) {
       margin: 0;
@@ -127,11 +128,6 @@
     background: transparent;
     width: 100%;
     height: 100%;
-    img {        
-      width: 100%;
-      height: 100%;
-      position: absolute;
-    } 
   }
   &__footer {
     display: flex;
