--- a/src/components/MainContent/MainContent.scss
+++ b/src/components/MainContent/MainContent.scss
@@ -102,17 +102,17 @@
     display: flex;
     position: relative;
     flex-direction: column;
-    align-items: center;
+    align-items: center;  
     justify-content: center;
     overflow: hidden;
     width: 100%;
     aspect-ratio: 466/685;
     img {        
       position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      top: 25px;
+      left: 10px;
+      width: 90%;
+      height: 105%;
     } 
     @media (max-height: 730px) {
       margin: 0;
