--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -153,7 +153,7 @@
     }
     &__header {
       display: flex;
-      margin-top: 60px;
+      margin-top: 30px;
       h6 {
         font-weight: 400;
         font-size: 32px;
@@ -252,6 +252,55 @@
         letter-spacing: 0.02em;
         color: var(--mainColor);
       }
+    }
+    &__item-box {
+      border: 1px solid #3f3773;
+      background: rgba(43, 47, 82, 0.3);
+      margin-top: 22px; 
+      border-radius: 10px;
+      width: 100%;
+      padding: 10px;
+    }
+    &__item-group {
+      display: flex;
+      flex-direction: column;
+      &:not(:last-child) {
+        margin-bottom: 15px;
+      }
+      p {
+        font-weight: 400;
+        font-size: 1.25rem;
+        line-height: 140%;
+        color: #fff;
+        &:not(:last-child) {
+          margin-bottom: 0.9375rem;
+        }
+      }
+    }
+    &__input {
+      position: relative;
+      border-radius: 1.25rem;
+      display: flex;
+      align-items: flex-end;
+      justify-content: space-between;
+      font-weight: 400;
+      line-height: 140%;
+      color: #fff;
+      border: 2px solid #fff;
+      font-size: 0.875rem !important;
+      padding: 15px 25px 15px 10px;
+    }
+    &__input-btn {
+      position: absolute;
+      top: 15px;
+      right: 10px;
+    }
+    &__submit {
+      display: flex;
+      align-self: flex-end;
+      font-weight: 600;
+      font-size: 1.625rem;
+      color: #fff;
     }
   }
 
