--- a/src/components/Preloader/Preloader.scss
+++ b/src/components/Preloader/Preloader.scss
@@ -8,18 +8,46 @@
   position: absolute;
   justify-content: center;
 }
+
 .preloaderText {
-	display: flex;
-	align-items: center;
-	position: absolute;
-	top: 80%;
-	padding: 0 40px;
-	h4 {
-		font-weight: 400;
-		font-size: 48px;
-		line-height: 130%;
-		letter-spacing: 0.01em;
-		text-align: center;
-		color: var(--altColor);
-	}
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top: 80%;
+  padding: 0 40px;
+
+  h4 {
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 130%;
+    letter-spacing: 0.01em;
+    text-align: center;
+    color: var(--altColor);
+  }
+}
+
+.progressBar {
+  position: absolute;
+  bottom: 10%;
+  width: 80%;
+  height: 10px;
+  background-color: #fff;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.progress {
+  width: 0;
+  height: 100%;
+  background-color: #2cb726;;
+  animation: progressAnimation 3s linear infinite;
+}
+
+@keyframes progressAnimation {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 100%;
+  }
 }
