--- a/src/components/MainContent/MainContent.scss
+++ b/src/components/MainContent/MainContent.scss
@@ -21,10 +21,8 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      position: fixed;
       width: 100%;
-      height: 100%;
-      margin-top: -75px;
+      margin: auto 0px;
       h4 {
         font-size: 22px;
       }   
@@ -104,11 +102,9 @@
     flex-direction: column;
     align-items: center;  
     justify-content: center;
-    overflow: hidden;
-    width: 100%;
     aspect-ratio: 466/685;
     img {        
-     position: absolute;
+    position: absolute;
     top: -100px;
     left: -55px;
     width: 310px;
