--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -307,6 +307,7 @@
 
   .popupLeaderboard {
     padding: 0 12px;
+    zoom: 0.9;
     &__wrapper {
         flex-direction: column;
         align-items: center;
@@ -447,12 +448,12 @@
           }
         }
       }
-      // &__tableItem:last-child {
-      //   border: 2px solid var(--mainColor);
-      //   backdrop-filter: blur(16px);
-      //   background: #2cb726;
-      //   color: var(--mainColor);
-      // }
+      &__tableItem:last-child {
+        border: 2px solid var(--mainColor);
+        backdrop-filter: blur(16px);
+        background: #2cb726;
+        color: var(--mainColor);
+      }
       &__itemData {
         display: flex;
         position: relative;
