--- a/src/components/MainContent/MainContent.scss
+++ b/src/components/MainContent/MainContent.scss
@@ -60,8 +60,6 @@
    margin-right: 10px;
    width: 28px;
    height: 28px;
-   border: 2px solid var(--mainColor);
-   border-radius: 62px;
    background: var(--altBG);
    img {
     width: 100%;
@@ -80,7 +78,7 @@
  }
  &__energyContainer {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   font-weight: 600;
   font-size: 22px;
   color: var(--altText);
@@ -96,6 +94,28 @@
   display: flex;
   flex-direction: row;
  }
+ &__energyBar {
+  margin-top: 10px;
+  justify-content: flex-start;
+  align-items: center;
+  position: relative;
+  display: flex;
+  width: 300px;
+  height: 15px;
+  border-radius: 20px;
+  progress {
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+  }
+  progress::-webkit-progress-bar {
+    border-radius: 20px;
+  }
+  progress::-webkit-progress-value {
+    border-radius: 20px;
+    background: linear-gradient(146deg, #6cb77f 0%, #478154 100%);
+  }
+}
   &__imageContainer {
     display: flex;
     position: relative;
@@ -152,8 +172,6 @@
   height: 48px;
   display: flex;
   align-items: center;
-  border: 2px solid var(--mainColor);
-  border-radius: 62px;
   img {
     width: 100%;
    }
