--- a/src/index.scss
+++ b/src/index.scss
@@ -4,7 +4,7 @@
   --mainColor: #1c2520;
   --altColor: #fff;
   --minWidth: 390px;
-  --mainBG: #A0F39C;
+  --mainBG: #9df19b;
   --altBG: #80c27d;
   }
   
