--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -53,7 +53,7 @@ body::after {
 .footerMain {
     z-index: 14;
     position: relative;
-    margin: 0 0 10px 0;
+    margin: 10px 0 10px 0;
     @media (max-width: 359px) { 
       scale: 0.9;
     }
@@ -185,13 +185,9 @@ body::after {
   }
   &__coinImg {
     width: 44px;
-    height: 44px;
-    border: 2px solid var(--mainColor);
-    border-radius: 62px;
-    background: var(--altBG);
+    background: transparent;
     img {
       width: 100%;
-      height: 100%;
     }
   }
   &__coinAmount {
