--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -475,7 +475,7 @@ body::after {
     align-items: center;
     justify-content: center;
     p {
-        padding: 4px 0 0 0;
+        padding: 0;
         font-weight: 400; 
         font-size: 14px;
         line-height: 100%;
