--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -23,24 +23,23 @@
 	display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 10px;
 }
  &__title {
-    font-size: 1.25rem;
+    font-size: 20px;
     position: relative;
     color: var(--mainColor);
     font-weight: 900;
     line-height: 100%;
-    margin-top: 30px;
+    margin-top: 20px;
     word-break: break-word;
   }
 	&__action {
-		margin-top: 10px;
+		margin-top: 20px;
 		padding: 10px 20px;
 		background-color: #007bff;
     color: var(--mainColor);
 		border: none;
-		border-radius: 5px;
+		border-radius: 10px;
 		cursor: pointer;
 		font-size: 16px;
 	}
