--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -125,7 +125,6 @@
 		display: flex;
 	}
 	&__content {
-		margin-top: 72px;
 		border: 2px solid #0d9047;
 		border-radius: 20px;
 		padding: 0px 12px 17px 12px;
@@ -304,8 +303,10 @@
 }
 .copied-message {
   display: inline-block;
-  margin-left: 10px;
-  color: green;
+	position: absolute;
+	top: 23px;
+	right: 10px;
+  color: var(--altColor);
   font-weight: bold;
   animation: fadeInOut 2s forwards;
 }
@@ -328,7 +329,6 @@
 		display: flex;
 	}
 	&__content {
-		margin-top: 72px;
 		border: 2px solid #0d9047;
 		border-radius: 20px;
 		padding: 0px 12px 17px 12px;
