--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -151,6 +151,7 @@ body::after {
     padding: 0 12px;
   }
   &__content {
+    margin-top: 36px;
     position: relative;
     border: 1px solid #0d9047;
     border-radius: 20px;
