--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -125,6 +125,7 @@
 		display: flex;
 	}
 	&__content {
+		margin-top: 36px;
 		border: 2px solid #0d9047;
 		border-radius: 20px;
 		padding: 0px 12px 17px 12px;
@@ -304,7 +305,7 @@
 .copied-message {
   display: inline-block;
 	position: absolute;
-	top: 23px;
+	top: -23px;
 	right: 10px;
   color: var(--altColor);
   font-weight: bold;
@@ -329,6 +330,7 @@
 		display: flex;
 	}
 	&__content {
+		margin-top: 36px;
 		border: 2px solid #0d9047;
 		border-radius: 20px;
 		padding: 0px 12px 17px 12px;
