--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -141,22 +141,22 @@
 		right: 12px;
 	}
 	&__title {
-		margin-top: 50px;
+		margin-top: 41px;
 		h4 {
 			font-weight: 400;
-			font-size: 30px;
-			line-height: 100%;
+			font-size: 32px;
+			line-height: 110%;
 			text-align: center;
 			color: var(--mainColor);
 		}
 	}
 	&__header {
 		display: flex;
-		margin-top: 20px;
+		margin-top: 30px;
 		h6 {
 			font-weight: 400;
-			font-size: 30px;
-			line-height: 100%;
+			font-size: 32px;
+			line-height: 110%;
 			text-align: center;
 			color: #1c2520;
 		}
@@ -182,7 +182,7 @@
 		padding: 16px 0;
 		p {
 			font-weight: 400;
-			font-size: 22px;
+			font-size: 24px;
 			line-height: 100%;
 			letter-spacing: 0.01em;
 			color: var(--altColor);
@@ -191,14 +191,14 @@
 	&__refInfo-item {
 		span {
 			font-weight: 400;
-			font-size: 22px;
+			font-size: 24px;
 			line-height: 100%;
 			letter-spacing: 0.01em;
 			color: var(--altColor);
 		}
 	}
 	&__grid {
-		margin-top: 20px;
+		margin-top: 32px;
 		width: 100%;
 	}
 	&__grid-list {
@@ -218,16 +218,16 @@
 		display: flex;
 		flex-direction: column;
 		gap: 10px;
-		h5 {
+		h4 {
 			font-weight: 400;
-			font-size: 26px;
+			font-size: 24px;
 			line-height: 100%;
 			letter-spacing: 0.01em;
 			color: #1c2520;
 		}
 		p {
 			font-weight: 400;
-			font-size: 20px;
+			font-size: 18px;
 			line-height: 100%;
 			color: #0d9047;
 		}
@@ -254,10 +254,10 @@
 	&__item-box {
 		border: 1px solid #0d9047;
 		background: #3a5b4d;
-		margin-top: 20px;
+		margin-top: 25px;
 		border-radius: 10px;
 		width: 100%;
-		padding: 15px;
+		padding: 16px 24px
 	}
 	&__item-group {
 		display: flex;
@@ -267,8 +267,9 @@
 		}
 		p {
 			font-weight: 400;
-			font-size: 22px;
+			font-size: 20px;
 			line-height: 100%;
+			letter-spacing: 0.02em;
 			color: var(--altColor);
 			&:not(:last-child) {
 				margin-bottom: 10px;
@@ -277,21 +278,29 @@
 	}
 	&__input {
 		position: relative;
-		border-radius: 1.25rem;
+		border: 1px solid #fff;
+		border-radius: 12px;
 		display: flex;
 		align-items: flex-end;
 		justify-content: space-between;
 		font-weight: 400;
-		line-height: 100%;
 		color: var(--altColor);
 		border: 2px solid var(--altColor);
-		font-size: 16px !important;
+		font-size: 10px!important;
+		line-height: 140%;
+		letter-spacing: 0.03em;
 		padding: 15px 25px 15px 15px;
 	}
 	&__input-btn {
 		position: absolute;
-		top: 13px;
-		right: 10px;
+		top: 0px;
+		right: 0px;
+		padding: 8px;
+		border-radius: 12px;
+		img {
+			width: 24px;
+			height: 24px;
+		}
 	}
 	&__submit {
 		display: flex;
@@ -299,6 +308,14 @@
 		font-weight: 600;
 		font-size: 22px;
 		color: var(--altColor);
+		padding: 12px;
+		width: 100%;
+		border-radius: 10px;
+		justify-content: center;
+		background: #2cb726;
+		line-height: 100%;
+		letter-spacing: 0.02em;
+		font-size: 20px;
 	}
 }
 .copied-message {
@@ -353,8 +370,8 @@
 		gap: 12px;
 		h4 {
 			font-weight: 400;
-			font-size: 26px;
-			line-height: 100%;
+			font-size: 32px;
+			line-height: 110%;
 			color: #1c2520;
 		}
 	}
