--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -160,16 +160,16 @@ body::after {
   }
   &__close {
       position: absolute;
-      top: 12px;
-      right: 12px;
+      top: 0;
+      right: 0;
   }
   &__title {
-      width: 230px;
       position: relative;
       h4 {
         font-weight: 400;
         font-size: 26px;
         line-height: 100%;
+        width: 75%;
         color: #1c2520;
       }
   }
