--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -41,6 +41,11 @@
 		font-size: 20px;
 		display: flex;
 		gap: 10px;
+		position: relative;
+		svg {
+			position: absolute;
+			right: 12px;
+		}
 	}
 	&__menu {
 		display: flex;
@@ -54,9 +59,10 @@
 		border: 1px solid #000000;
 		border-radius: 20px;
 		padding: 12px;
-		gap: 14px;
-		margin-top: 64px;
-		right: 12px;
+		gap: 8px;
+		margin-top: 74px;
+		left: 12px;
+		width: 97%;
 	}
 	&__menu-links {
 		border: 1px solid #172610;
@@ -64,7 +70,7 @@
 		padding: 16px 24px;
 		height: 56px;
 		font-weight: 400;
-		font-size: 18px;
+		font-size: 24px;
 		line-height: 100%;
 		letter-spacing: 0.02em;
 		color: var(--mainColor);
@@ -72,6 +78,7 @@
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
+		width: 100%;
 	}
 }
 
