--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -144,8 +144,8 @@
 	}
 	&__close {
 		position: absolute;
-		top: 0;
-		right: 0;
+		top: 12px;
+		right: 12px;
 	}
 	&__title {
 		margin-top: 41px;
@@ -390,7 +390,7 @@
 		display: flex;
 		flex-direction: column;
 		width: 100%;
-		gap: 0.625rem;
+		gap: 5px;
 	}
 	&__tableItem {
 		border: 1px solid #3f3773;
