--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -70,7 +70,7 @@
 		padding: 16px 24px;
 		height: 56px;
 		font-weight: 400;
-		font-size: 24px;
+		font-size: 22px;
 		line-height: 100%;
 		letter-spacing: 0.02em;
 		color: var(--mainColor);
@@ -130,9 +130,9 @@
 		min-height: 100%;
 		width: 100%;
 		display: flex;
+		justify-content: center;
 	}
 	&__content {
-		margin-top: 30%;
 		border: 2px solid #0d9047;
 		border-radius: 20px;
 		padding: 0px 12px 17px 12px;
