--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -410,6 +410,7 @@ body::after {
     height: 6px;
     background: transparent;
     padding: 0 9px 0 12px;
+    margin-top: 10px;
     progress {
       width: 100%;
       height: 100%;
@@ -436,7 +437,6 @@ body::after {
   .popupTasks__task-rew {
     border: none;
     background: transparent;
-    padding: 0;
     justify-content: flex-end;
     img {
       margin-right: 0;
@@ -494,6 +494,3 @@ body::after {
 }
 
 
-.claimButtonContainer {
-  width: 100%
-}
